# bank-support-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.template  log.txt  main.py  pyproject.toml  pytest.ini  seed_demo_data.py  test_local_db.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 22a8fb23f903_create_initial_tables.py  381c3f7bffb4_create_tables.py  5aeebc17342b_initial_migration.py  b914ab706ef9_create_user_table.py  b9fce890e5ea_initial_migration.py
app/: main.py
app/agents/: account_agent.py
app/api/v1/: accounts.py  agent.py  auth.py  banks.py  cards.py  email.py  router.py  transactions.py  users.py
app/core/: cache.py  config.py  db_utils.py  deps.py  security.py
app/db/: models.py  postgres.py  schema.py  session.py
app/db/models/: account.py  bank.py  base.py  card.py  transaction.py  user.py
app/integrations/: obp_client.py
app/middleware/: logging.py
app/models/: account.py  bank.py  card.py  chat.py  transaction.py  user.py
app/schemas/: account.py  agent.py  bank.py  card.py  chat.py  email.py  transaction.py  user.py
app/scripts/: seed_bank.py  sync_obp.py
app/services/: account_service.py  audit_service.py  bank_service.py  card_service.py  email_service.py  llm_agent.py  obp_service.py  transaction_service.py  user_service.py
app/templates/email/: account_created.html  (+5 more)
app/utils/: constants.py  helpers.py
bank_agent/agents/: account_agent.py  card_agent.py  fraud_agent.py  media_agent.py  notification_agent.py  support_agent.py
bank_agent/alembic/: env.py  script.py.mako
bank_agent/core/: audit.py  auth.py  cache.py  config.py  deps.py  graph_builder.py  logfire_integraiton.py  orchestrator.py  rate_limiter.py  security.py
bank_agent/db/: crud.py  models.py  postgres.py  storage.py
bank_agent/integrations/: obp_client.py
bank_agent/models/: account.py  agent_responses.py  audit.py  bank.py  base.py  card.py  chat.py  document.py  message.py  session.py  ticket.py  transaction.py  user.py
bank_agent/routers/: agent_router.py  auth_router.py  banking_router.py  mcp_router.py  users_router.py
bank_agent/scripts/: sync_obp.py
bank_agent/services/: account_service.py  obp_service.py
bank_agent/tests/: test_orchestrator.py
bank_agent/utils/: constants.py
tests/: conftest.py  helpers.py
(+8 files in other folders)
